Corrected Demo POM
Corrected Demo POM

Whoops, I need to be more careful about copying and pasting POMs. The
class argument for the maven-jar-plugin was incorrect.

Jeremy. Allen. Wildsmith

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -31,7 +31,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>io.github.jevaengine.rpgbase.client.Main</mainClass>
+							<mainClass>io.github.jevaengine.rpgbase.demo.Main</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
